--- a/app/views/audits/_audit_details.html.erb
+++ b/app/views/audits/_audit_details.html.erb
@@ -3,7 +3,7 @@
 		<h4 class="button-head">Audit Details</h4>
 		<div>
     <% if can? :manage, :all %>
-    <%= link_to 'Update', edit_audit_path(@audit), class: 'button round tiny left ' %>
+    <%= link_to 'Update', edit_audit_path(@audit), class: 'button tiny left ' %>
     <% end %>
     </div></br>
 	</p>
