removed formating from layout file and fixed home page formatting

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <%= render "getting_started" %>
 
 
-	
+	<div class="row">
 	<!-- <fieldset> -->
 
 		<div class="small-12 medium-12 large-7 columns">
@@ -29,6 +29,8 @@
 			
 
 		</div>
+
+	</div>
 	
 
 		
