--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,11 @@
   <body>
 
     <%= render :partial => "partials/nav" %>
-    <div class="row">
+    <!-- <div class="row"> -->
       <%= yield %>
-    </div>
+    <!-- </div> -->
 
-    <%#= breadcrumbs pretext: "You are here: ",
-                separator: " &rsaquo; " %>
+   
     
   </body>
 </html>
