--- a/app/views/audits/_form.html.erb
+++ b/app/views/audits/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_nested_form_for(@audit, html: { class: 'form-horizontal', class: 'formtext' }) do |audit_form| %>
 
-  <% if not flash[:notice].nil? %>
+  <% if not flash[:notice].nil? and not flash[:notice].include? "Logged in!"%>
     <div id="error_explanation">
       <h2><%= pluralize(flash[:notice].count, "error") %> prohibited this audit from being saved:</h2>
 
