--- a/app/views/walkthroughs/_form.html.erb
+++ b/app/views/walkthroughs/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for(@walkthrough, html: { class: 'form-horizontal form-sub'}) do |f| %>
 
-  <% if not flash[:notice].nil? %>
+  <% if not flash[:notice].nil? and not flash[:notice].include? "Logged in!"%>
     <div id="error_explanation">
       <h2><%= pluralize(flash[:notice].count, "error") %> prohibited this questionnaire from being saved:</h2>
 
