--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,10 @@
+<% if can? :manage, :all %>
 <h1>Listing users</h1>
 
 <table>
   <thead>
     <tr>
       <th>Username</th>
-      <th>Password</th>
       <th></th>
       <th></th>
       <th></th>
@@ -12,18 +12,15 @@
   </thead>
 
   <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.username %></td>
-        <td><%= user.password %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+      <% @users.each do |user| %>
+        <tr>
+          <td><%= user.username %></td>
+        </tr>
+      <% end %>
   </tbody>
 </table>
 
 <br>
 
 <%= link_to 'New User', new_user_path %>
+<% end %> 
