added auth so new and edit arent available to a guest user

--- a/app/views/walkthroughs/show.html.erb
+++ b/app/views/walkthroughs/show.html.erb
@@ -1,3 +1,4 @@
+<% if can? :manage, :all %>
 <h5>
   <%= link_to "Requests", requests_path %> /
   <%= link_to @walkthrough.request.customer.company_name+" - "+@walkthrough.request.date.strftime('%B %e, %Y'), @walkthrough.request %>
@@ -13,3 +14,4 @@
 
 </div>
 
+<% end %>
