--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,3 +1,4 @@
+<% if can? :manage, :all %>
 <h1>Listing notes</h1>
 
 <table>
@@ -29,3 +30,4 @@
 <br>
 
 <%= link_to 'New Note', new_note_path %>
+<% end %>
