--- a/app/views/walkthroughs/index.html.erb
+++ b/app/views/walkthroughs/index.html.erb
@@ -1,3 +1,4 @@
+<% if can? :manage, :all %>
 <h1>Listing walkthroughs</h1>
 
 <table>
@@ -137,3 +138,5 @@
 <br>
 
 <%= link_to 'New Walkthrough', new_walkthrough_path %>
+
+<% end %>
