--- a/app/views/errors/unauthorized.html.erb
+++ b/app/views/errors/unauthorized.html.erb
@@ -1,1 +1,5 @@
-<h3>You are not authorized to access this page. Please login before continuing</h3>
+<div class="small-12 columns getting_started_container ">
+	<div class="row">
+		<h3>Please login before continuing</h3>	
+	</div>
+</div>
