audit edit form

--- a/app/views/audits/_form.html.erb
+++ b/app/views/audits/_form.html.erb
@@ -15,7 +15,7 @@
     <h1>Audit Form</h1>
   </div>
 
-  <div class="small-12 medium-6 columns">
+  <div class="medium-6 columns show-for-medium-up">
       <div class="actions">
         <br><br><br>
       </div>
