--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,10 +1,16 @@
-<h5>
-	<%= link_to "Clients", customers_path %> /
-	<%= link_to @customer.company_name, @customer %>
-</h5>
+<div class="row">
+	<div class="small-12 columns">
+		<h5>
+			<%= link_to "Clients", customers_path %> /
+			<%= link_to @customer.company_name, @customer %>
+		</h5>
 
 
-<h3><%= "Editing Client, " + @customer.company_name%></h3>
+		<h3><%= "Editing Client, " + @customer.company_name%></h3>
 
-<%= render 'form' %>
+		<%= render 'form' %>
+		
+	</div>
+</div>
+
 
