--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,20 +1,18 @@
-
-
+<div class="row">
   <div class="small-12 columns">
+
+
     <h1 class="button-head">All Clients</h1>
-    <div class="add_button">
-    <% if can? :manage, :all %>
-    	<%= link_to '+ Add Client', new_customer_path, class: 'button round tiny left ' %>	
-	<% end %>
-    </div>
-  </div>
-  
+        <div class="add_button">
+        <% if can? :manage, :all %>
+          <%= link_to '+ Add Client', new_customer_path, class: 'button round tiny left ' %>  
+      <% end %>
+        </div>
 
-
-
-  <div class="small-12 columns">
     <%= render 'all_customers' %>
+
   </div>
+</div>
 
 
 
