--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,38 +1,48 @@
-<h5>
-	<%= link_to "Clients", customers_path %> /
-	<%= link_to @customer.company_name, @customer %>
-</h5>
+<div class="row">
+  <div class="small-12 columns">
 
-<div class="small-12 columns">
-	<p id="notice"><%= notice %></p>
+
+		<h5>
+			<%= link_to "Clients", customers_path %> /
+			<%= link_to @customer.company_name, @customer %>
+		</h5>
+	</div>
 </div>
 
-<div class="small-12 columns">
-	<h1 class="button-head"><%=@customer.company_name%></h1>
-	<% if can? :manage, :all %>
-	<div class="add_button"><%= link_to 'Update Client', edit_customer_path(@customer), class: 'button tiny left ' %></div>
-	<% end %>
-	
-</div>
+<div class="row">
+
+		<div class="small-12 columns">
+			<p id="notice"><%= notice %></p>
+		</div>
+
+		<div class="small-12 columns">
+			<h1 class="button-head"><%=@customer.company_name%></h1>
+			<% if can? :manage, :all %>
+			<div class="add_button"><%= link_to 'Update Client', edit_customer_path(@customer), class: 'button tiny left ' %></div>
+			<% end %>
+			
+		</div>
 
 
-<!-- TITLE AND EDIT BUTTON -->
+		<!-- TITLE AND EDIT BUTTON -->
 
-	<div class="small-12 columns">
-		<h1 class="button-head">Client Requests</h1>
-		<div class="add_button"><%= link_to '+ Add Request', new_request_path(:customer_id => @customer.id), class: "button tiny round left" %></div>
-	</div>
-
-
-
-	<div class="small-12 columns">
-    	<%= render 'customer_requests' %>
-	</div>
+			<div class="small-12 columns">
+				<h1 class="button-head">Client Requests</h1>
+				<div class="add_button"><%= link_to '+ Add Request', new_request_path(:customer_id => @customer.id), class: "button tiny round left" %></div>
+			</div>
 
 
-<div class="small-12 columns">
-	<%= link_to 'Back', customers_path, class: "button" %>
-	<% if can? :manage, :all %>
-		<%= link_to '+ Add Request', new_request_path(:customer_id => @customer.id), class: "button" %>
-	<% end %>
+
+			<div class="small-12 columns">
+		    	<%= render 'customer_requests' %>
+			</div>
+
+
+		<div class="small-12 columns">
+			<%= link_to 'Back', customers_path, class: "button" %>
+			<% if can? :manage, :all %>
+				<%= link_to '+ Add Request', new_request_path(:customer_id => @customer.id), class: "button" %>
+			<% end %>
+		</div>
+
 </div>
