--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,5 +1,16 @@
-<h1>Editing note</h1>
+<div class="row">
+	<div class="small-12 columns">
 
-<%= render 'form', :edit => true %>
+		<h5> 
+		  <%= link_to "Requests", requests_path %> /
+		  <%= link_to @note.request.customer.company_name+" - "+@note.request.date.strftime('%B %e, %Y'), @note.request %>	
+		</h5>
+
+		<h1>Editing note</h1>
+
+		<%= render 'form', :edit => true %>
+
+	</div>
+</div>
 
 
