--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,10 +1,17 @@
-<h5> 
-  <%= link_to "Requests", requests_path %> /
-  <%= link_to @note.request.customer.company_name+" - "+@note.request.date.strftime('%B %e, %Y'), @note.request %>	
-</h5>
+<div class="row">
+	<div class="small-12 columns">
 
-<h1>New note</h1>
 
-<%= render 'form', :newnote => true %>
+		<h5> 
+		  <%= link_to "Requests", requests_path %> /
+		  <%= link_to @note.request.customer.company_name+" - "+@note.request.date.strftime('%B %e, %Y'), @note.request %>	
+		</h5>
+
+		<h1>New note</h1>
+
+		<%= render 'form', :newnote => true %>
+
+	</div>
+</div>
 
 
