--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,26 +1,29 @@
-<div class="small-12 columns">
-	<p id="notice"><%= notice %></p>
-	<h5>
-		<%= link_to "Requests", requests_path %> /
-	  <%= link_to @note.request.customer.company_name+" - "+@note.request.date.strftime('%B %e, %Y') + " / ", @note.request %>
-	  <%= link_to "Note", @note %>
-	</h5>
+<div class="row">
+	<div class="small-12 columns">
+		<p id="notice"><%= notice %></p>
+		<h5>
+			<%= link_to "Requests", requests_path %> /
+		  <%= link_to @note.request.customer.company_name+" - "+@note.request.date.strftime('%B %e, %Y') + " / ", @note.request %>
+		  <%= link_to "Note", @note %>
+		</h5>
 
-		<%= link_to 'Back to Request', request_path(@note.request_id), class: "button" %>
+			<br><br>
+			<%= link_to 'Back to Request', request_path(@note.request_id), class: "button" %>
 
-		<p>
-		  <%if @note.image.exists?%>
-      			<%= image_tag @note.image.url(:large) %></br>
-      		<%end%>
-		  
-		</p>
+			<p>
+			  <%if @note.image.exists?%>
+	      			<%= image_tag @note.image.url(:large) %></br>
+	      		<%end%>
+			  
+			</p>
 
-		<p>
-		  <strong>Description:</strong>
-		  <%= @note.description %>
-		</p>
+			<p>
+			  <strong>Description:</strong>
+			  <%= @note.description %>
+			</p>
 
-		<%= link_to 'Update', edit_note_path(@note), class: "button" %>
-        <td><%= link_to 'Delete', :note, method: :delete, data: { confirm: 'Are you sure?' }, class: "alert button" %></td>		
-        
- </div>
+			<%= link_to 'Update', edit_note_path(@note), class: "button" %>
+	        <td><%= link_to 'Delete', :note, method: :delete, data: { confirm: 'Are you sure?' }, class: "alert button" %></td>		
+	        
+	 </div>
+</div>
