--- a/app/views/walkthroughs/_form.html.erb
+++ b/app/views/walkthroughs/_form.html.erb
@@ -17,7 +17,7 @@
     </div>
 
     <div class="small-12 medium-6 columns">
-      <div class="actions">
+      <div class="button-group actions">
         <%= link_to 'Back to Request', request_path(@walkthrough.request_id), class: 'button' %>
         <%= f.submit "Save", class: 'button success' %>
         
