--- a/app/views/walkthroughs/edit.html.erb
+++ b/app/views/walkthroughs/edit.html.erb
@@ -1,11 +1,13 @@
-<h5>
-  <%= link_to "Requests", requests_path %> /
-  <%= link_to @walkthrough.request.customer.company_name+" - "+@walkthrough.request.date.strftime('%B %e, %Y'), @walkthrough.request %> /
-  <%= link_to "Initial Questionnaire", @walkthrough %>
-</h5>
+<div class="row">
+	<div class="small-12 columns">
 
-<%= render 'form' %>
+		<h5>
+		  <%= link_to "Requests", requests_path %> /
+		  <%= link_to @walkthrough.request.customer.company_name+" - "+@walkthrough.request.date.strftime('%B %e, %Y'), @walkthrough.request %> /
+		  <%= link_to "Initial Questionnaire", @walkthrough %>
+		</h5>
+	</div>
+	<br><br>
+	<%= render 'form' %>
+</div>
 
-<!-- <div class="sticky-footer">
-	<%#= render 'bottom_bar' %>
-</div> -->
