fixed bottom bar on walkthroughs

--- a/app/views/walkthroughs/_bottom_bar.html.erb
+++ b/app/views/walkthroughs/_bottom_bar.html.erb
@@ -4,7 +4,7 @@
       <nav class="top-bar bottom-bar" >
         <section class="top-bar-section">
 
-          <%= link_to new_note_path(:request_id => @walkthrough.request_id) do %>
+          <%= link_to new_note_path(:request_id => @walkthrough.request_id), data: {confirm: "Are you sure? Unsaved data will be lost."} do %>
             <div class="bottom-button">
               Add Note
 
