--- a/app/views/walkthroughs/show.html.erb
+++ b/app/views/walkthroughs/show.html.erb
@@ -1,17 +1,23 @@
 <% if can? :manage, :all %>
-<h5>
-  <%= link_to "Requests", requests_path %> /
-  <%= link_to @walkthrough.request.customer.company_name+" - "+@walkthrough.request.date.strftime('%B %e, %Y'), @walkthrough.request %>
-  <%= link_to "Initial Questionnaire", @walkthrough %>
-</h5>
+<div class="row">
+	<div class="small-12 columns">
 
-<div class="small-12 columns">
 
-  <p id="notice"><%= notice %></p>
+		<h5>
+		  <%= link_to "Requests", requests_path %> /
+		  <%= link_to @walkthrough.request.customer.company_name+" - "+@walkthrough.request.date.strftime('%B %e, %Y'), @walkthrough.request %>
+		  <%= link_to "Initial Questionnaire", @walkthrough %>
+		</h5>
+	</div>
 
-  <%= render 'show_form' %>
-  
+	
 
+	  <p id="notice"><%= notice %></p>
+
+	  <%= render 'show_form' %>
+	  
+
+	
 </div>
 
 <% end %>
