finished formatting waste model

--- a/app/views/wastes/edit.html.erb
+++ b/app/views/wastes/edit.html.erb
@@ -1,4 +1,13 @@
-<h1>Editing waste</h1>
 
-<%= render 'form' %>
-<%= link_to 'Back', wastes_path %>
+<div class="row">
+	<div class="small-12 columns">
+		<h1>Editing waste</h1>
+	</div>
+
+	<%= render 'form' %>
+	
+	<div class="small-12 columns">
+		<%= link_to 'Back', wastes_path %>
+	</div>
+
+</div>
