--- a/app/views/wastes/new.html.erb
+++ b/app/views/wastes/new.html.erb
@@ -1,5 +1,16 @@
-<h1>New waste</h1>
+<div class="row">
 
-<%= render 'form' %>
+	<div class="small-12 columns">
 
-<%= link_to 'Back', wastes_path %>
+		<h1>New waste</h1>
+	</div>
+
+	<%= render 'form' %>
+
+	<div class="small-12 columns">
+
+		<%= link_to 'Back', wastes_path %>
+
+	</div>
+
+</div>
