add a new client and request

--- a/app/views/home/help.html.erb
+++ b/app/views/home/help.html.erb
@@ -10,19 +10,16 @@
 		<div id="new-client">
 			<h3>How to start a new audit for a new client:</h3>
 			<ol>
-				<li>Add a client</li>
+				<li>Add a client and a request for services</li>
 				<ol type="a">
-					<li>Go to the 'Clients' page from the navigation bar, and click 'Add Client'.</li>
-					<li>Enter the name of the company or organization, and click 'Add Client' to add the new client to the system.</li>
-				</ol>
-				<li>Add a request</li>
-				<ol type="a">
-					<li>Click the 'Add Request' button from the client information page of step 1b.</li>
+					<li>Click 'Add a new client to the system' from the home page.</li>
+					<li>Enter the name of the company or organization in the Company Name field. This is required.</li>
 					<li>Enter request information as needed. Only fields denoted with an asterisk (*) are required. All information can be edited at any point after submission.</li>
 				</ol>
 				<li>Add an Initial Questionnaire</li>
 				<ol type="a">
-					<li>Click the 'Add Questionnaire' button on the left side of the request for services page from step 2b.</li>
+					<li>Select the request from the Client Requests table on the Client page.</li>
+					<li>Click the '+ Add Questionnaire' button on the top left side of the request details page.</li>
 					<li>Enter Initial Questionniare information as needed. Only fields denoted with an asterisk (*) are required. Tap bolded headers (i.e. Does your building have a...) to expand for more questions. All information can be edited at any point after submission.</li>
 				</ol>
 				<li>Add a Waste Audit</li>
