new request to existing client

--- a/app/views/home/help.html.erb
+++ b/app/views/home/help.html.erb
@@ -12,7 +12,7 @@
 			<ol>
 				<li>Add a client and a request for services</li>
 				<ol type="a">
-					<li>Click 'Add a new client to the system' from the home page.</li>
+					<li>Click 'Add a New Client to the System' from the home page.</li>
 					<li>Enter the name of the company or organization in the Company Name field. This is required.</li>
 					<li>Enter request information as needed. Only fields denoted with an asterisk (*) are required. All information can be edited at any point after submission.</li>
 				</ol>
@@ -20,12 +20,18 @@
 				<ol type="a">
 					<li>Select the request from the Client Requests table on the Client page.</li>
 					<li>Click the '+ Add Questionnaire' button on the top left side of the request details page.</li>
-					<li>Enter Initial Questionniare information as needed. Only fields denoted with an asterisk (*) are required. Tap bolded headers (i.e. Does your building have a...) to expand for more questions. All information can be edited at any point after submission.</li>
+					<li>Enter Initial Questionniare information as needed. Only fields denoted with an asterisk (*) are required. Click bolded headers (i.e. Does your building have a...) to expand for more questions. All information can be edited at any point after submission.</li>
+					<li>Click 'Save'. Add photos and notes throughout the walkthrough by clicking 'Add Note' at the bottom of the screen (only available on tablets and mobile devices).</li>
+					<li>Click 'Back to Request' to return to the request details page.</li>
 				</ol>
 				<li>Add a Waste Audit</li>
 				<ol type="a">
-					<li>Click the 'Back to Request' button from the Initial Questionniare details page from step 3b.</li>
-					<li>Click the 'Add Audit' button.</li>
+					<li>Click the 'Add Audit' button from the request details page.</li>
+					<li>Select the waste type: Landfill, Recycle, or Compost. Fill in the Time Period and Location. All audit form fields are required.</li>
+					<li>Add waste items by selecting a waste category from the drop down menu. Weight and origin are optional fields.</li>
+					<li>Click '+ Add an item' to add waste as needed. Delete waste by clicking the red 'x' button on the right.</li>
+					<li>For custom waste not listed in the drop down menu, click 'Add note' to record the item manually. Be sure to save the audit form before adding custom waste notes or data will be lost.</li> 
+					<li>Return to the request details page by clicking the link formatted as 'Client - Date' at the top of the screen. Add each audit (landfill, recycle, compost) separately from the request details page.</li>
 				</ol>
 			</ol>
 		</div>
@@ -33,9 +39,9 @@
 		<div id="existing-client">
 			<h3>How to add a new request for services for an existing client</h3>
 			<ol>
-				<li>Go to the 'Clients' page from the navigation bar, and confirm that the client is in the system.</li>
-				<li>If the client is not in the system, follow the instructions above to create a new client. Otherwise, select the client from the list.</li>
-				<li>Click 'Add Request' and follow the instructions above starting from step 2b.</li>
+				<li>Click 'Add a Request to an Existing Client' from the home page.</li>
+				<li>Select the client from the list.</li>
+				<li>Proceed with the instructions above starting from 1c.</li>
 			</ol>
 		</div>
 
