--- a/app/views/home/help.html.erb
+++ b/app/views/home/help.html.erb
@@ -45,8 +45,15 @@
 			</ol>
 		</div>
 
-		<div id="note">
-			<h3>How to add a note to a request</h3>
+		<div id="delete">
+			<h3>How to delete:</h3>
+			<ol>
+				<li>A Client: Clients cannot be deleted from the system.</li>
+				<li>A Request: Requests cannot be deleted from the system.</li>
+				<li>An Initial Questionnaire: Go to the request details page, select 'Site Questionnaire' from the list of documents, click 'Delete' at the bottom of the form.</li>
+				<li>An Audit: Go to the request details page, select the audit from the list of documents, click 'Delete' at the top of the audit page.</li>
+				<li>A Waste Item: Go to the request details page, select the audit from the list of documents, click 'Update', click the red 'x' by the waste item.</li>
+			</ol>
 		</div>
 	</div>
 
