--- a/app/views/home/help.html.erb
+++ b/app/views/home/help.html.erb
@@ -8,7 +8,7 @@
 		</div>
 
 		<div id="new-client">
-			<h3>How to start a new audit for a new client:</h3>
+			<h3>How to start a request for a new client:</h3>
 			<ol>
 				<li>Add a client and a request for services</li>
 				<ol type="a">
@@ -37,7 +37,7 @@
 		</div>
 
 		<div id="existing-client">
-			<h3>How to add a new request for services for an existing client</h3>
+			<h3>How to add a new request for an existing client:</h3>
 			<ol>
 				<li>Click 'Add a Request to an Existing Client' from the home page.</li>
 				<li>Select the client from the list.</li>
@@ -54,6 +54,11 @@
 				<li>An Audit: Go to the request details page, select the audit from the list of documents, click 'Delete' at the top of the audit page.</li>
 				<li>A Waste Item: Go to the request details page, select the audit from the list of documents, click 'Update', click the red 'x' by the waste item.</li>
 			</ol>
+		</div>
+
+		<div id="export">
+			<h3>How to export data:</h3>
+			<p>At this time, only waste audit data can be exported. Select the waste audit from the request details page and click 'Download' to download the data in either CSV or Excel format.</p>
 		</div>
 	</div>
 
