--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -8,6 +8,5 @@
 </div>
 
 <div class="row">
-	<%= render 'form' %>
-	<%= link_to 'Cancel', request_path(@request), class: 'button alert right' %>
+	<%= render 'form', :edit => true %>
 </div>
