--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,9 +1,7 @@
 <div class="row">
   <div class="small-12 columns">
-	
-	<h1>New Client</h1>
 
-	<%= render 'form' %>
+	<%= render 'form', :newclient => true %>
 
 	</div>
 </div>
