added New Note button to walkthrough, changed buttons to tiny format

--- a/app/views/walkthroughs/_form.html.erb
+++ b/app/views/walkthroughs/_form.html.erb
@@ -18,8 +18,8 @@
 
     <div class="small-12 medium-6 columns">
       <div class="button-group actions">
-        <%= link_to 'Back to Request', request_path(@walkthrough.request_id), class: 'button' %>
-        <%= f.submit "Save", class: 'button success' %>
+        <%= link_to 'Back to Request', request_path(@walkthrough.request_id), class: 'button tiny' %>
+        <%= f.submit "Save", class: 'button tiny success' %>
         
       </div>
     </div>
@@ -77,17 +77,25 @@
    <!-- Only show on large screens -->
    <div class="small-12 medium-8 columns show-for-large">
       <div class="actions">
-        <%= link_to 'Back to Request', request_path(@walkthrough.request_id), class: 'button' %>
+        <%= link_to 'Back to Request', request_path(@walkthrough.request_id), class: 'button tiny alert' %>
 
         <% if not @walkthrough.date.nil? %>
-           <%= link_to 'Delete', @walkthrough, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button alert' %>
+           <%= link_to 'Delete', @walkthrough, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button tiny alert' %>
         <% end %>
 
-        <%= f.submit "Save", class: 'button success' %>
+        <%= link_to new_note_path(:request_id => @walkthrough.request_id), data: {confirm: "Are you sure? Unsaved data will be lost."} do %>
+            <div class="button tiny">
+              Add Note
+
+            </div>
+          <%end%>
+
+        <%= f.submit "Save", class: 'button tiny success' %>
 
         
       </div>
     </div>
+
 
   <!-- Only show on medium and down screens -->
   <%= render 'bottom_bar', f: f %>
@@ -95,4 +103,5 @@
 
   </div> <!-- FormBack End -->
 <% end %>
+</div>
 
