added team to public nav bar

--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -20,6 +20,7 @@
             <li><a href="/about.html">About the Team</a></li>
             <li><%= link_to 'Logout', logout_path %></li>
           <% else %>
+            <li><a href="/about.html">About the Team</a></li>
             <li><%= link_to 'Login', login_path %></li>
           <% end %>
         </ul>
