moved about link to help page and removed from nav bar

--- a/app/views/home/help.html.erb
+++ b/app/views/home/help.html.erb
@@ -60,6 +60,13 @@
 			<h3>How to export data:</h3>
 			<p>At this time, only waste audit data can be exported. Select the waste audit from the request details page and click 'Download' to download the data in either CSV or Excel format.</p>
 		</div>
+
+		<div id="meet">
+			<h3><a href="/about.html">Meet the Development Team</a></h3>
+
+		</div>
+
+
 	</div>
 
 </div>
