updated help page with hosting and domain info

--- a/app/views/home/help.html.erb
+++ b/app/views/home/help.html.erb
@@ -61,6 +61,14 @@
 			<p>At this time, only waste audit data can be exported. Select the waste audit from the request details page and click 'Download' to download the data in either CSV or Excel format.</p>
 		</div>
 
+		<div id="subscription">
+			<h3>Domain Name & Hosting:</h3>
+			<h6>DigitalOcean</h6>
+			<p>The DigitalOcean hosting service will continue as long as there is a valid credit card associated with the account. No additional steps are necessary to continue hosting. The credit card currently on file is under Justin Stockdale’s name.</p>
+			<h6>GoDaddy</h6>
+			<p>The domain name, zwpawasteaudit.org, is purchased for 3 years for $8.99/year. Renewal can be done through the GoDaddy control panel and Ross Hirschfeld has the credentials for the account.</p>
+		</div>
+
 		<div id="meet">
 			<h3><a href="/about.html">Meet the Development Team</a></h3>
 
